...
            app:layout_constraintBottom_toTopOf = "@+id/music_player_fragment"
            app:layout_constraintLeft_toLeftOf = "parent"
            app:layout_constraintRight_toRightOf = "parent"
            app:layout_constraintTop_toTopOf = "parent">

        <androidx.fragment.app.FragmentContainerView
                android:id = "@+id/nav_host_fragment"
                android:name = "androidx.navigation.fragment.NavHostFragment"
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                app:defaultNavHost = "true"
                app:navGraph = "@navigation/mobile_navigation" />

...
